--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
 
     <header>
       <div class="menu-principale">
-
+        <img src="img/logo.png" alt="">
+        <p id="menu">FEATURE EDITORIALS ENVIRONMENT BLOG SHOP CONTACT</p>
       </div>
+
     </header>
 
     <main>
       <section>
-        <div class="sotto-menu">
-
+        <div class="banner">
+          <img src="img/banner.jpg" alt="">
+          <div class="textyoga">
+          <p>Gli attrezzi più importanti di cui hai bisogno per fare yoga sono il tuo corpo e la tua mente </p>
+          <p id="sub"> Vivere spiritualmente è vivere nel presente. Lo yoga ci porta nel momento presente, facendoci diventare coscienti del nostro allineneamente corporale...</span></p>
+          </div>
         </div>
       </section>
       <section>
