--- a/index.html
+++ b/index.html
@@ -18,23 +18,39 @@
     </header>
 
     <main>
+
       <section>
         <div class="banner">
-          <img src="img/banner.jpg" alt="">
           <div class="textyoga">
-          <p>Gli attrezzi più importanti di cui hai bisogno per fare yoga sono il tuo corpo e la tua mente </p>
-          <p id="sub"> Vivere spiritualmente è vivere nel presente. Lo yoga ci porta nel momento presente, facendoci diventare coscienti del nostro allineneamente corporale...</span></p>
+          <p id="title">Gli attrezzi più importanti di cui hai bisogno per fare yoga sono il tuo corpo e la tua mente </p>
+          <p id="sub"> Vivere spiritualmente è vivere nel presente. Lo yoga ci porta nel momento presente, facendoci diventare coscienti del nostro allineneamente corporale...</p>
+          </div>
+          <div class="layover">
           </div>
         </div>
       </section>
+
       <section>
         <div class="contenitore">
           <div class="top">
-
+            <div class="texttop">
+            <h1>LeaderShip</h1>
+            <h5>Lo yoga non prende tempo, ti restituisce il tempo</h5>
+            </div>
           </div>
 
           <div class="content left">
+            <div class="imgcontent">
+              <img id="imgcontentlayover" src="img/img-1.jpg" alt="">
 
+            </div>
+            <div class="contentlayover">
+            </div>
+            
+
+            <div class="textcontent">
+              <p>Se ci sforziamo il respiro diventerà costretto o forzato. Se non siamo focalizzati il respiro sarà sommerso dal suono dei nostri pensieri. Mantenete la consapevolezza sul respiro e ogni istante sarà una meditazione.</p>
+            </div>
           </div>
 
           <div class="middle">
@@ -42,8 +58,11 @@
           </div>
 
           <div class="content right">
+            <div class="imgcontent">
+              <img id="imgcontentlayover" src="img/img-3.jpg" alt="">
+              <p>Quando il respiro è affannoso anche la mente è instabile. Ma quando il respiro si calma anche la mente lo fa, e lo yogi raggiunge lunga vita. Pertanto, si deve imparare a controllare il respiro.</p>
 
-          </div>
+            </div>
         </div>
 
       </section>
@@ -51,7 +70,7 @@
 
     <footer>
       <div class="finale">
-
+        <p>Designed with &hearts;</p>
       </div>
     </footer>
 
